# CS-Chat_System

./: .gitignore  CMakeLists.txt  CS聊天室.xmind  README.md  clear.sh
BOOK/: cjson使用笔记.md
Doc/: CMake.md  DAY1.md  LookTreeBegin.txt  muduo.md  mysql.md
client/: cli_main.c  init.c  init.h  tell.c  tell.h  user.c  user.h
clion/: cli_main.c
history/src/: cln
history/src/123/: 123.c
history/src/client/: cli_main.c
history/src/lib/: mycjson.c  mycjson.h  mysys.c  tell.c  tell.h  user.c  user.h
history/src/server/: ser_main.c
include/: public.hpp
include/server/: ChatServer.hpp  ChatService.hpp  friendmodel.hpp  groupmodel.hpp  user.hpp  usermodel.hpp
include/server/database/: db.hpp
include/server/model/: offlinemessagemodel.hpp  usermodel.hpp
include/server/user/: group.hpp  groupuser.hpp  user.hpp
project/: client  make.sh  server
project/data/sys/: all_user
server/: init.c  init.h  ser_main.c  server  user.c  user.h
server/data/sys/: all_user
src/: CMakeLists.txt  Makefile  cln  ser
src/client/: cli_main.c  main.cpp
src/data/: test.json
src/lib/: cJSON.c  init.c  init.h  mycjson.c  mycjson.h  mysys.c  mysys.h  tell.c  tell.h  user.c  user.h
src/server/: CMakeLists.txt  ChatServer.cpp  ChatService.cpp  db.cpp  friendmodel.cpp  groupmodel.cpp  main.cpp  ser_main.c  usermodel.cpp
src/server/model/: offlinemessagemodel.cpp  usermodel.cpp
test/: testMessage
thridparty/cjson/: cJSON.c  mycjson.c  mycjson.h  tell.c  tell.h
